--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="searchNavbar" class="searchNavbar">
       <div class="searchInputContainer">
         <input
-          oninput="fetchSearchResults(this.value)"
+          oninput="getSearchResults(this.value)"
           type="text"
           class="searchInput"
           placeholder="Search..."
