feat: add debounce

--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
 
     <div id="searchNavbar" class="searchNavbar">
       <div class="searchInputContainer">
-        <input
-          oninput="getSearchResults(this.value)"
-          type="text"
-          class="searchInput"
-          placeholder="Search..."
-        />
+        <input type="text" class="searchInput" placeholder="Search..." />
         <button class="closeSearch" aria-label="Close search">&times;</button>
       </div>
     </div>
