style: change logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <header>
-      <div id="logo" class="movierama">Movie<span>Rama</span></div>
+      <div id="logo" class="movierama">
+        <img src="/logo.png" alt="Movierama logo" />
+      </div>
       <div class="searchContainer">
         <button class="searchIcon">
           <img src="/icons/search.svg" alt="search icon" />
