--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div id="logo" class="movierama">
         <img src="/logo.png" alt="Movierama logo" />
       </div>
